# my_furhat_backend

./: .gitignore  README.md  pyproject.toml  question_cache.json  requirements_poetry.txt
.devcontainer/: Dockerfile  devcontainer.json
furhat_skills/Conversation/: .gitignore  build.gradle
furhat_skills/Conversation/src/main/kotlin/furhatos/app/templateadvancedskill/: parms.kt
furhat_skills/Conversation/src/main/kotlin/furhatos/app/templateadvancedskill/flow/main/: active.kt  conversation.kt  (+1 more)
furhat_skills/Conversation/src/main/kotlin/furhatos/app/templateadvancedskill/nlu/: intents.kt
furhat_skills/Conversation/src/main/kotlin/furhatos/app/templateadvancedskill/setting/: autobehaviour.kt  modes.kt  personas.kt
furhat_skills/DocumentMultiQ&A/: build.gradle
furhat_skills/DocumentMultiQ&A/src/main/kotlin/furhatos/app/templateadvancedskill/flow/: init.kt  parent.kt
furhat_skills/DocumentMultiQ&A/src/main/kotlin/furhatos/app/templateadvancedskill/setting/: autobehaviour.kt  interactionParameters.kt
middleware/: main.py
my_furhat_backend/: main.py
my_furhat_backend/RAG/: rag_flow.py
my_furhat_backend/agents/: concierge_agent.py  conversational_agent.py  conversational_agent_2.py  document_agent.py  test_2_conversational_agent.py  test_conversational_agent.py
my_furhat_backend/api_clients/: foursquare_client.py  ipdata_client.py  osm_client.py  overpass_client.py
my_furhat_backend/concierge_flow/: concierge.py
my_furhat_backend/config/: settings.py
my_furhat_backend/llm_tools/: tools.py
my_furhat_backend/models/: chatbot_factory.py  classifier.py  llm.py  llm_factory.py  model_pipeline.py
my_furhat_backend/nodes/: chatbot_node.py  foursquare_node.py  ipdata_node.py  osm_node.py  overpass_node.py
my_furhat_backend/utils/: gpu_utils.py  util.py
src/my_furhat_backend/: main.py
(+6 files in other folders)
