[project]
name = "my-furhat-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jeevanp03",email = "parmar.jeevan03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
