[project]
name = "my-furhat-backend"
version = "0.1.0"
description = "AI Agent"
authors = [
    { name = "Jeevan Parmar", email = "j29parma@uwaterloo.ca" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3,<3.0.0"
]

[project.scripts]
ai-agent = "my_furhat_backend.main:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
